bank-project/backendapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-backend-deployment
  template:
    metadata:
      labels:
        app: bank-backend-deployment
    spec:
      containers:
        - name: bank-backend-container
          image: /bank-backendapi:46
          ports:
            - containerPort: 8080
