bank-project/frontend.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend-banking-deployment
# spec:
#   replicas: 1 
#   selector:
#     matchLabels:
#       app: frontend-banking-deployment
#   template:
#     metadata:
#       labels:
#         app: frontend-banking-deployment
#     spec:
#       containers:
#       - name: frontend-banking-container
#         image: /bank-frontend
#         ports:
#         - containerPort: 3000
#         env:
#         - name: REACT_APP_API_URL
#           valueFrom:
#             configMapKeyRef:
#               name: bank-config
#               key: REACT_APP_API_URL


apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-banking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-banking-deployment
  template:
    metadata:
      labels:
        app: frontend-banking-deployment
    spec:
      containers:
        - name: frontend-banking-container
          image: 255694842918.dkr.ecr.eu-north-1.amazonaws.com/bank-frontend:21
          ports:
            - containerPort: 3000
