bank-project/frontend-service.yaml
 
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
